@@ -1,3 +1,7 @@
+2006-12-30  Don Allingham  <don@gramps-project.org>
+
+	* C/gramps.xml: start the rework of the key binding sections
+
 2006-12-21  Lubo Vasko  <pgval@inMail.sk>
 	* sk/sk.po: Translation update.
 	* sk/figures/reorder.png: Add figure.
